Fix whitespace.

--- a/public/stylesheets/default.css
+++ b/public/stylesheets/default.css
@@ -35,9 +35,9 @@
 	padding: 0;
 }
 
-ul { 
-	list-style: none; 
-	margin: 0; 
+ul {
+	list-style: none;
+	margin: 0;
 	padding: 0;
 }
 
@@ -63,26 +63,26 @@ a {
 }
 
 dd {
-	margin-left:10px;
+	margin-left: 10px;
 }
 
-dd,dt {
-	float:left;
+dd, dt {
+	float: left;
 }
 
 dd.new-line {
-	clear:left;
-	margin-left:0;
+	clear: left;
+	margin-left: 0;
 }
 
 dl {
-	margin:0 0 0 10px;
-	overflow:auto;
+	margin: 0 0 0 10px;
+	overflow: auto;
 }
 
 dl.to-the-right dd {
-	float:right;
-	margin:0;
+	float: right;
+	margin: 0;
 }
 
 dt {
@@ -196,101 +196,96 @@ textarea.text {
 
 /* Images
 -------------------------------*/
-
-a.avatar,a.thumbnail,a.preview,span.avatar,span.thumbnail,span.preview {
-	-moz-background-size:contain;
-	-o-background-size:contain;
-	-webkit-background-size:contain;
-	background:url() transparent no-repeat center center;
-	background-size:contain;
-	display:inline-block;
+a.avatar, a.thumbnail, a.preview, span.avatar, span.thumbnail, span.preview {
+	-moz-background-size: contain;
+	-o-background-size: contain;
+	-webkit-background-size: contain;
+	background: url() transparent no-repeat center center;
+	background-size: contain;
+	display: inline-block;
 }
 
 a.thumbnail {
-	border-bottom:6px solid #000;
+	border-bottom: 6px solid #000;
 }
 
 a.thumbnail.rating-selected {
-	border-color:#fff;
+	border-color: #fff;
 }
 
 a.thumbnail.rating-general {
-	border-color:red;
+	border-color: red;
 }
 
 a.thumbnail.reating-mature {
-	border-color:#0f0;
+	border-color: #0f0;
 }
 
 a.thumbnail.rating-adult {
-	border-color:#00f;
+	border-color: #00f;
 }
 
-a.avatar.small,span.avatar.small,a.thumbnail.small,span.thumbnail.small {
-	height:20px;
-	width:20px;
+a.avatar.small, span.avatar.small, a.thumbnail.small, span.thumbnail.small {
+	height: 20px;
+	width: 20px;
 }
 
-a.avatar.medium,span.avatar.medium,a.thumbnail.medium,span.thumbnail.medium {
-	height:50px;
-	width:50px;
+a.avatar.medium, span.avatar.medium, a.thumbnail.medium, span.thumbnail.medium {
+	height: 50px;
+	width: 50px;
 }
 
-a.avatar.large,span.avatar.large,a.thumbnail.large,span.thumbnail.large {
-	height:100px;
-	width:100px;
+a.avatar.large, span.avatar.large, a.thumbnail.large, span.thumbnail.large {
+	height: 100px;
+	width: 100px;
 }
 
 /* Social
 -------------------------------*/
 span.social {
 	background: transparent url('../images/social-icons.png') no-repeat left top;
-	display: inline-block; 
-	height: 32px; 
+	display: inline-block;
+	height: 32px;
 	overflow: hidden;
 	text-indent: 100%;
 	white-space: nowrap;
-	width: 32px; 
+	width: 32px;
 }
 
 /* TODO replace these I got from http://designdeck.co.uk/a/1252 */
 span.social.with-label {
-
 	line-height: 32px;
 	overflow: visible;
 	padding-left: 42px;
 	text-indent: 0;
 	white-space: normal;
 	width: auto;
-
 }
 
-span.social.social-aim{ background-position: 0 0; } 
-span.social.social-behance{ background-position: 0 -82px; } 
-span.social.social-digg{ background-position: 0 -164px; } 
-span.social.social-dribbble{ background-position: 0 -246px; } 
-span.social.social-ember{ background-position: 0 -328px; } 
-span.social.social-evernote{ background-position: 0 -410px; } 
-span.social.social-facebook{ background-position: 0 -492px; } 
-span.social.social-flickr{ background-position: 0 -574px; } 
-span.social.social-forrst{ background-position: 0 -656px; } 
-span.social.social-github{ background-position: 0 -738px; } 
-span.social.social-google{ background-position: 0 -820px; } 
-span.social.social-last-fm{ background-position: 0 -902px; } 
-span.social.social-linkedin{ background-position: 0 -984px; } 
-span.social.social-paypal{ background-position: 0 -1066px; } 
-span.social.social-rss{ background-position: 0 -1148px; } 
-span.social.social-sharethis{ background-position: 0 -1230px; } 
-span.social.social-skype{ background-position: 0 -1312px; } 
-span.social.social-tumblr{ background-position: 0 -1394px; } 
-span.social.social-twitter{ background-position: 0 -1476px; } 
-span.social.social-vimeo{ background-position: 0 -1558px; } 
-span.social.social-wordpress{ background-position: 0 -1640px; } 
-span.social.social-yahoo{ background-position: 0 -1722px; } 
-span.social.social-youtube{ background-position: 0 -1804px; } 
-.social.social-zerply{ background-position: 0 -1886px; } 
-
-
+span.social.social-aim { background-position: 0 0; }
+span.social.social-behance { background-position: 0 -82px; }
+span.social.social-digg { background-position: 0 -164px; }
+span.social.social-dribbble { background-position: 0 -246px; }
+span.social.social-ember { background-position: 0 -328px; }
+span.social.social-evernote { background-position: 0 -410px; }
+span.social.social-facebook { background-position: 0 -492px; }
+span.social.social-flickr { background-position: 0 -574px; }
+span.social.social-forrst { background-position: 0 -656px; }
+span.social.social-github { background-position: 0 -738px; }
+span.social.social-google { background-position: 0 -820px; }
+span.social.social-last-fm { background-position: 0 -902px; }
+span.social.social-linkedin { background-position: 0 -984px; }
+span.social.social-paypal { background-position: 0 -1066px; }
+span.social.social-rss { background-position: 0 -1148px; }
+span.social.social-sharethis { background-position: 0 -1230px; }
+span.social.social-skype { background-position: 0 -1312px; }
+span.social.social-tumblr { background-position: 0 -1394px; }
+span.social.social-twitter { background-position: 0 -1476px; }
+span.social.social-vimeo { background-position: 0 -1558px; }
+span.social.social-wordpress { background-position: 0 -1640px; }
+span.social.social-yahoo { background-position: 0 -1722px; }
+span.social.social-youtube { background-position: 0 -1804px; }
+.social.social-zerply { background-position: 0 -1886px; }
 
 /* Header
 -------------------------------*/
@@ -338,8 +333,7 @@ nav a, #log-out {
 	padding: 0.725em 1.125em;
 }
 
-#main-navigation, 
-#user-navigation {
+#main-navigation, #user-navigation {
 	background-color: #121416;
 }
 
@@ -390,9 +384,7 @@ nav a, #log-out {
 /* Content
 -------------------------------*/
 #main {
-
 	padding-bottom: 6.25em;
-
 }
 
 /* Footer
